--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,30 +13,35 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd GEVit-DL2-Project/"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "T1tNdHhQnBrw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%cd GEVit-DL2-Project/"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vvt4W7i3ni7c"
+      },
+      "outputs": [],
       "source": [
         "!pip install einops\n",
         "!pip install wandb\n",
         "!pip install ml_collections"
-      ],
-      "metadata": {
-        "id": "Vvt4W7i3ni7c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Su51Tu9OnCTI"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torchvision\n",
@@ -63,16 +52,29 @@
         "import torch\n",
         "import g_selfatt.groups as groups\n",
         "import models\n",
-        "from torch.cuda.amp import GradScaler, autocast"
-      ],
-      "metadata": {
-        "id": "Su51Tu9OnCTI"
-      },
-      "execution_count": null,
-      "outputs": []
+        "from torch.cuda.amp import GradScaler, autocast\n",
+        "\n",
+        "import g_selfatt\n",
+        "from g_selfatt.nn import (\n",
+        "    Conv3d1x1,\n",
+        "    GroupLocalSelfAttention,\n",
+        "    GroupSelfAttention,\n",
+        "    LayerNorm,\n",
+        "    LiftLocalSelfAttention,\n",
+        "    LiftSelfAttention,\n",
+        "    TransformerBlock,\n",
+        "    activations,\n",
+        ")\n",
+        "from g_selfatt.utils import num_params\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ocl6C1lPnV0f"
+      },
+      "outputs": [],
       "source": [
         "data_mean = (0.1307,)\n",
         "data_stddev = (0.3081,)\n",
@@ -88,15 +90,15 @@
         "        torchvision.transforms.Normalize(data_mean, data_stddev),\n",
         "    ]\n",
         ")"
-      ],
-      "metadata": {
-        "id": "ocl6C1lPnV0f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5sFvl7w2qWBG"
+      },
+      "outputs": [],
       "source": [
         "training_set = MNIST_rot(root=\"./data\", stage=\"train\", download=True, transform=transform_train, data_fraction=1)\n",
         "evaluation_set = MNIST_rot(root=\"./data\", stage=\"validation\", download=True, transform=transform_train, data_fraction=1)\n",
@@ -114,62 +116,97 @@
         "    shuffle=False,\n",
         "    num_workers=4,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "5sFvl7w2qWBG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hQse7spCqZHx"
+      },
+      "outputs": [],
       "source": [
         "# simulate some little training procedure to investigate speed of different parts of the codebase\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "model = models.GroupTransformer(\n",
-        "            group=groups.SE2(num_elements=4),\n",
-        "            in_channels=1,\n",
-        "            num_channels=20,\n",
-        "            block_sizes=[2, 3],\n",
-        "            expansion_per_block=1,\n",
-        "            crop_per_layer=[2, 0, 2, 1, 1],\n",
-        "            image_size=28,\n",
-        "            num_classes=10,\n",
-        "            dropout_rate_after_maxpooling=0.0,\n",
-        "            maxpool_after_last_block=False,\n",
-        "            normalize_between_layers=False,\n",
-        "            patch_size=5,\n",
-        "            num_heads=9,\n",
-        "            norm_type=\"LayerNorm\",\n",
-        "            activation_function=\"Swish\",\n",
-        "            attention_dropout_rate=0.1,\n",
-        "            value_dropout_rate=0.1,\n",
-        "            whitening_scale=1.41421356,\n",
-        "        )\n",
-        "model = model.to(device)"
-      ],
-      "metadata": {
-        "id": "hQse7spCqZHx"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    group=groups.SE2(num_elements=4),\n",
+        "    in_channels=1,\n",
+        "    num_channels=20,\n",
+        "    block_sizes=[2, 3],\n",
+        "    expansion_per_block=1,\n",
+        "    crop_per_layer=[2, 0, 2, 1, 1],\n",
+        "    image_size=28,\n",
+        "    num_classes=10,\n",
+        "    dropout_rate_after_maxpooling=0.0,\n",
+        "    maxpool_after_last_block=False,\n",
+        "    normalize_between_layers=False,\n",
+        "    patch_size=5,\n",
+        "    num_heads=9,\n",
+        "    norm_type=\"LayerNorm\",\n",
+        "    activation_function=\"Swish\",\n",
+        "    attention_dropout_rate=0.1,\n",
+        "    value_dropout_rate=0.1,\n",
+        "    whitening_scale=1.41421356,\n",
+        ")\n",
+        "model = torch.nn.DataParallel(model)\n",
+        "model = model.to(device)\n",
+        "num_params(model)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Or create your own model (try to overfit first):\n",
+        "\n",
+        "# model = models.GroupTransformer(\n",
+        "#     group=groups.SE2(num_elements=4),  # 90 degree rotations\n",
+        "#     in_channels=1,\n",
+        "#     num_channels=20,\n",
+        "#     block_sizes=[2, 3, 3, 3],\n",
+        "#     expansion_per_block=1,\n",
+        "#     crop_per_layer=[2, 2, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+        "#     image_size=28,\n",
+        "#     num_classes=10,\n",
+        "#     dropout_rate_after_maxpooling=0.0,\n",
+        "#     maxpool_after_last_block=False,\n",
+        "#     normalize_between_layers=False,\n",
+        "#     patch_size=7,\n",
+        "#     num_heads=9,\n",
+        "#     norm_type=\"LayerNorm\",\n",
+        "#     activation_function=\"Swish\",\n",
+        "#     attention_dropout_rate=0.1,\n",
+        "#     value_dropout_rate=0.1,\n",
+        "#     whitening_scale=1.41421356,\n",
+        "# )\n",
+        "# model = torch.nn.DataParallel(model)\n",
+        "# model = model.to(device)\n",
+        "# num_params(model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iwYUu_51xevJ"
+      },
+      "outputs": [],
       "source": [
         "criterion = torch.nn.CrossEntropyLoss()\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
         "scaler = GradScaler()"
-      ],
-      "metadata": {
-        "id": "iwYUu_51xevJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SY6ApuvnqnZG"
+      },
+      "outputs": [],
       "source": [
         "# lets try lr = 0.1, this is a really small model!!\n",
         "# also who uses swish, lets also try relu later (or does this break equivariance?)\n",
@@ -194,15 +231,15 @@
         "\n",
         "# first run with lr = 0.1 doesn't seem to be too high\n",
         "# might even try higher, also don't forget to experiment with relu"
-      ],
-      "metadata": {
-        "id": "SY6ApuvnqnZG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "f4UQbSX3qpnH"
+      },
+      "outputs": [],
       "source": [
         "correct = total = 0\n",
         "\n",
@@ -218,12 +255,32 @@
         "    total += labels.size(0)\n",
         "\n",
         "correct / total"
-      ],
-      "metadata": {
-        "id": "f4UQbSX3qpnH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
