Updates based on test run

--- a/post_hoc_equivariance/post_hoc_equivariance.ipynb
+++ b/post_hoc_equivariance/post_hoc_equivariance.ipynb
@@ -72,6 +72,7 @@
         "import torchvision.transforms as tvtf\n",
         "import torchvision.transforms.functional as TF\n",
         "\n",
+        "import copy\n",
         "from tqdm import tqdm\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -96,7 +97,6 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "def set_seed(seed):\n",
-        "    \"\"\"Set random seed for reproducibility.\"\"\"\n",
         "    torch.manual_seed(seed)\n",
         "    torch.cuda.manual_seed_all(seed)  # if using CUDA\n",
         "    torch.backends.cudnn.deterministic = True  # if using CUDA\n",
@@ -180,17 +180,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "DToN2C4cQLKO"
       },
       "outputs": [],
       "source": [
-        "def train(model, n_epochs=5):\n",
-        "    model.train()\n",
-        "    optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
+        "def train(model, train_loader, n_epochs=5, device=torch.device('cuda' if torch.cuda.is_available() else 'cpu')):\n",
         "    model.to(device)\n",
+        "    optimizer = torch.optim.Adam(model.parameters(), lr=0.0005)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    best_val_acc = evaluate(model)\n",
+        "    print(f\"Starting validaitons accuracy: {best_val_acc}\")\n",
+        "    best_model_state = None\n",
         "\n",
         "    for epoch in tqdm(range(n_epochs)):\n",
         "        epoch_losses = []\n",
@@ -203,7 +205,21 @@
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "            epoch_losses.append(loss.item())\n",
-        "        print(f\"Epoch {epoch+1}: loss {sum(epoch_losses)/len(epoch_losses):.4f}\")\n",
+        "\n",
+        "        # validate and store best model state\n",
+        "        val_acc = evaluate(model)\n",
+        "        if val_acc > best_val_acc:\n",
+        "            best_val_acc = val_acc\n",
+        "            best_model_state = copy.deepcopy(model.state_dict())\n",
+        "\n",
+        "        # log epoch loss\n",
+        "        print(f\"Epoch {epoch+1}: loss {sum(epoch_losses)/len(epoch_losses):.4f}, validation accuracy {val_acc}\")\n",
+        "\n",
+        "    # Load best model state into the original model\n",
+        "    if best_model_state is not None:\n",
+        "        model.load_state_dict(best_model_state)\n",
+        "\n",
+        "    return model.to(device)\n",
         "\n",
         "def evaluate(model):\n",
         "    model.eval()\n",
@@ -502,7 +518,7 @@
         "set_seed(42)\n",
         "scoring_model = ScoringModel()\n",
         "eq_model_learned_score_aggregation = PostHocLearnedScoreAggregation(model=model, scoring_model=scoring_model)\n",
-        "train(eq_model_learned_score_aggregation, n_epochs=10)\n",
+        "eq_model_learned_score_aggregation = train(eq_model_learned_score_aggregation, n_epochs=10)\n",
         "evaluate(eq_model_learned_score_aggregation)"
       ]
     },
@@ -522,7 +538,7 @@
         "set_seed(42)\n",
         "aggregation_model = Transformer(embed_dim=64, hidden_dim=128, num_heads=4, num_layers=2, dropout=0.1)\n",
         "eq_model_learned_aggregation = PostHocLearnedAggregation(model=model, aggregation_model=aggregation_model)\n",
-        "train(eq_model_learned_aggregation, n_epochs=25)\n",
+        "eq_model_learned_aggregation = train(eq_model_learned_aggregation, n_epochs=25)\n",
         "evaluate(eq_model_learned_aggregation)"
       ]
     },
@@ -543,7 +559,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_mean = PostHocEquivariantMean(model, finetune_mlp_head=True)\n",
-        "train(eq_model_mean, n_epochs=25)\n",
+        "eq_model_mean = train(eq_model_mean, n_epochs=25)\n",
         "evaluate(eq_model_mean)"
       ]
     },
@@ -557,7 +573,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_max = PostHocEquivariantMax(model, finetune_mlp_head=True)\n",
-        "train(eq_model_max, n_epochs=25)\n",
+        "eq_model_max = train(eq_model_max, n_epochs=25)\n",
         "evaluate(eq_model_max)"
       ]
     },
@@ -571,7 +587,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_sum = PostHocEquivariantSum(model, finetune_mlp_head=True)\n",
-        "train(eq_model_sum, n_epochs=25)\n",
+        "eq_model_sum = train(eq_model_sum, n_epochs=25)\n",
         "evaluate(eq_model_sum)"
       ]
     },
@@ -585,7 +601,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_most_probable = PostHocEquivariantMostProbable(model, finetune_mlp_head=True)\n",
-        "train(eq_model_most_probable, n_epochs=25)\n",
+        "eq_model_most_probable = train(eq_model_most_probable, n_epochs=25)\n",
         "evaluate(eq_model_most_probable)"
       ]
     },
@@ -599,7 +615,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_most_certain = PostHocMostCertain(model, finetune_mlp_head=True)\n",
-        "train(eq_model_most_certain, n_epochs=25)\n",
+        "eq_model_most_certain = train(eq_model_most_certain, n_epochs=25)\n",
         "evaluate(eq_model_most_certain)"
       ]
     },
@@ -614,7 +630,7 @@
         "model = get_non_equivariant_vit()\n",
         "scoring_model = ScoringModel()\n",
         "eq_model_learned_score_aggregation = PostHocLearnedScoreAggregation(model=model, scoring_model=scoring_model, finetune_mlp_head=True)\n",
-        "train(eq_model_learned_score_aggregation, n_epochs=25)\n",
+        "eq_model_learned_score_aggregation = train(eq_model_learned_score_aggregation, n_epochs=25)\n",
         "evaluate(eq_model_learned_score_aggregation)"
       ]
     },
@@ -628,7 +644,7 @@
         "set_seed(42)\n",
         "aggregation_model = Transformer(embed_dim=64, hidden_dim=128, num_heads=4, num_layers=2, dropout=0.1)\n",
         "eq_model_learned_aggregation = PostHocLearnedAggregation(model=model, aggregation_model=aggregation_model, finetune_mlp_head=True)\n",
-        "train(eq_model_learned_aggregation, n_epochs=25)\n",
+        "eq_model_learned_aggregation = train(eq_model_learned_aggregation, n_epochs=25)\n",
         "evaluate(eq_model_learned_aggregation)"
       ]
     },
@@ -649,7 +665,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_mean = PostHocEquivariantMean(model, finetune_model=True)\n",
-        "train(eq_model_mean, n_epochs=25)\n",
+        "eq_model_mean = train(eq_model_mean, n_epochs=25)\n",
         "evaluate(eq_model_mean)"
       ]
     },
@@ -663,7 +679,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_max = PostHocEquivariantMax(model, finetune_model=True)\n",
-        "train(eq_model_max, n_epochs=25)\n",
+        "eq_model_max = train(eq_model_max, n_epochs=25)\n",
         "evaluate(eq_model_max)"
       ]
     },
@@ -677,7 +693,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_sum = PostHocEquivariantSum(model, finetune_model=True)\n",
-        "train(eq_model_sum, n_epochs=25)\n",
+        "eq_model_sum = train(eq_model_sum, n_epochs=25)\n",
         "evaluate(eq_model_sum)"
       ]
     },
@@ -691,7 +707,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_most_probable = PostHocEquivariantMostProbable(model, finetune_model=True)\n",
-        "train(eq_model_most_probable, n_epochs=25)\n",
+        "eq_model_most_probable = train(eq_model_most_probable, n_epochs=25)\n",
         "evaluate(eq_model_most_probable)"
       ]
     },
@@ -705,7 +721,7 @@
         "set_seed(42)\n",
         "model = get_non_equivariant_vit()\n",
         "eq_model_most_certain = PostHocMostCertain(model, finetune_model=True)\n",
-        "train(eq_model_most_certain, n_epochs=25)\n",
+        "eq_model_most_certain = train(eq_model_most_certain, n_epochs=25)\n",
         "evaluate(eq_model_most_certain)"
       ]
     },
@@ -720,7 +736,7 @@
         "model = get_non_equivariant_vit()\n",
         "scoring_model = ScoringModel()\n",
         "eq_model_learned_score_aggregation = PostHocLearnedScoreAggregation(model=model, scoring_model=scoring_model, finetune_model=True)\n",
-        "train(eq_model_learned_score_aggregation, n_epochs=25)\n",
+        "eq_model_learned_score_aggregation = train(eq_model_learned_score_aggregation, n_epochs=25)\n",
         "evaluate(eq_model_learned_score_aggregation)"
       ]
     },
@@ -734,7 +750,7 @@
         "set_seed(42)\n",
         "aggregation_model = Transformer(embed_dim=64, hidden_dim=128, num_heads=4, num_layers=2, dropout=0.1)\n",
         "eq_model_learned_aggregation = PostHocLearnedAggregation(model=model, aggregation_model=aggregation_model, finetune_model=True)\n",
-        "train(eq_model_learned_aggregation, n_epochs=25)\n",
+        "veq_model_learned_aggregation = train(eq_model_learned_aggregation, n_epochs=25)\n",
         "evaluate(eq_model_learned_aggregation)"
       ]
     }
