--- a/post_hoc_equivariance/post_hoc_equivariance.ipynb
+++ b/post_hoc_equivariance/post_hoc_equivariance.ipynb
@@ -112,7 +112,7 @@
         "                            num_patches=49,\n",
         "                            num_classes=10,\n",
         "                            dropout=0.1).to(device)\n",
-        "    model_path = \"../saved/results/model.pt\"\n",
+        "    model_path = \"../saved/results/model2.pt\"\n",
         "    print(model.load_state_dict(torch.load(model_path, map_location=device), strict=False))\n",
         "    return model\n",
         "\n",
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "DToN2C4cQLKO"
       },
@@ -410,7 +410,7 @@
       "outputs": [],
       "source": [
         "# mean pooling\n",
-        "eq_model_mean = PostHocEquivariantMean(model)\n",
+        "eq_model_mean = PostHocEquivariantMean(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_mean)"
       ]
     },
@@ -427,7 +427,7 @@
       "outputs": [],
       "source": [
         "# max pooling\n",
-        "eq_model_max = PostHocEquivariantMax(model)\n",
+        "eq_model_max = PostHocEquivariantMax(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_max)"
       ]
     },
@@ -444,7 +444,7 @@
       "outputs": [],
       "source": [
         "# summing latent dimensions\n",
-        "eq_model_sum = PostHocEquivariantSum(model)\n",
+        "eq_model_sum = PostHocEquivariantSum(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_sum)"
       ]
     },
@@ -461,7 +461,7 @@
       "outputs": [],
       "source": [
         "# product of class probabilities\n",
-        "eq_model_most_probable = PostHocEquivariantMostProbable(model)\n",
+        "eq_model_most_probable = PostHocEquivariantMostProbable(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_most_probable)"
       ]
     },
@@ -478,7 +478,7 @@
       "outputs": [],
       "source": [
         "# take transformation with highest certainty for class\n",
-        "eq_model_most_certain = PostHocMostCertain(model)\n",
+        "eq_model_most_certain = PostHocMostCertain(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_most_certain)"
       ]
     },
