--- a/demo/demo_only_3_and_8.ipynb
+++ b/demo/demo_only_3_and_8.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/colin/miniconda3/envs/g_selfatt/lib/python3.7/site-packages/torch/cuda/amp/autocast_mode.py:114: UserWarning: torch.cuda.amp.autocast only affects CUDA ops, but CUDA is not available.  Disabling.\n",
-      "  warnings.warn(\"torch.cuda.amp.autocast only affects CUDA ops, but CUDA is not available.  Disabling.\")\n"
+      "/home/wouter/miniconda3/envs/myenv/lib/python3.10/site-packages/torch/amp/autocast_mode.py:204: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn('User provided device_type of \\'cuda\\', but CUDA is not available. Disabling')\n"
      ]
     }
    ],
@@ -50,29 +50,54 @@
     "import torch\n",
     "import g_selfatt.groups as groups\n",
     "import models\n",
-    "from torch.cuda.amp import GradScaler, autocast"
+    "from torch.cuda.amp import GradScaler, autocast\n",
+    "import torchvision.transforms.functional as TF"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_transforms(image, n_rotations=4, flips=True):\n",
+    "    \"\"\"\n",
+    "    Returns all transformations of a single input image\n",
+    "    \"\"\"\n",
+    "    transforms = [image]\n",
+    "\n",
+    "    # Rotations\n",
+    "    for i in range(1, n_rotations):\n",
+    "        angle = i * (360 / n_rotations)\n",
+    "        rotated_image = TF.rotate(image, angle)\n",
+    "        transforms.append(rotated_image)\n",
+    "\n",
+    "    # Flips\n",
+    "    if flips:\n",
+    "        flips = []\n",
+    "        for transform in transforms:\n",
+    "            flipped_image_lr = TF.hflip(transform)\n",
+    "            flips.append(flipped_image_lr)\n",
+    "        # for transform in transforms:\n",
+    "        #     flipped_image_ud = TF.vflip(transform)\n",
+    "        #     flips.append(flipped_image_ud)\n",
+    "        transforms.extend(flips)\n",
+    "    res = torch.cat(transforms)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/colin/miniconda3/envs/g_selfatt/lib/python3.7/site-packages/torch/cuda/amp/autocast_mode.py:114: UserWarning: torch.cuda.amp.autocast only affects CUDA ops, but CUDA is not available.  Disabling.\n",
-      "  warnings.warn(\"torch.cuda.amp.autocast only affects CUDA ops, but CUDA is not available.  Disabling.\")\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +154,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[41.8541, 24.0368],\n",
+       "        [41.3417, 26.5721],\n",
+       "        [41.7229, 24.0158],\n",
+       "        [41.1493, 26.3804],\n",
+       "        [41.8832, 23.9894],\n",
+       "        [41.1724, 26.4986],\n",
+       "        [41.9311, 24.0095],\n",
+       "        [41.2635, 26.5700]], grad_fn=<ViewBackward0>)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = iter(test_loader)\n",
+    "image, target = next(data)\n",
+    "\n",
+    "model.eval()\n",
+    "transforms = get_transforms(image, n_rotations=8, flips=False)\n",
+    "model(transforms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = iter(test_loader)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1003,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
