--- a/post_hoc_equivariance/post_hoc_equivariance.ipynb
+++ b/post_hoc_equivariance/post_hoc_equivariance.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3qTVlksnQLKN"
       },
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -103,7 +103,15 @@
         "id": "hPxJrqIXQLKO",
         "outputId": "55ba545a-6fb3-4d8b-9d11-094142b62b15"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<All keys matched successfully>\n"
+          ]
+        }
+      ],
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
@@ -125,7 +133,8 @@
         "                                num_classes=10,\n",
         "                                dropout=0.1).to(device)\n",
         "        # model_path = \"../saved/results/model2.pt\"\n",
-        "        model_path = \"../saved/results/mnist_2555.pt\"\n",
+        "        # model_path = \"../saved/results/mnist_2555.pt\"\n",
+        "        model_path = \"../saved/results/lessdatamnistourvit.pt\"\n",
         "        print(model.load_state_dict(torch.load(model_path, map_location=device), strict=False))\n",
         "    else:  # pcam\n",
         "        model = VisionTransformer(embed_dim=64,\n",
@@ -146,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "DToN2C4cQLKO"
       },
@@ -238,15 +247,16 @@
         "    best_model_state = None\n",
         "\n",
         "    for epoch in tqdm(range(n_epochs)):\n",
+        "        model.train(True)\n",
         "        epoch_losses = []\n",
         "        for images, targets in train_loader:\n",
+        "            print(\"starrte training\")\n",
         "            images = images.to(device)\n",
         "            targets = targets.to(device)\n",
         "            optimizer.zero_grad()\n",
         "            outputs = model(images)\n",
         "            loss = criterion(outputs, targets)\n",
         "            loss.backward()\n",
-        "            print(loss.item())\n",
         "            optimizer.step()\n",
         "            epoch_losses.append(loss.item())\n",
         "\n",
@@ -440,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -466,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -474,15 +484,33 @@
         "id": "FmasS5kmQLKR",
         "outputId": "40d16c36-497b-4ef8-8f07-ac2d5a2be231"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 16/16 [00:04<00:00,  3.32it/s]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "86.25"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# baseline\n",
-        "test(model)"
+        "evaluate(model)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -490,10 +518,18 @@
         "id": "BroB1oQ9QLKR",
         "outputId": "8dd4b08b-a400-4040-8de9-34ca935b111a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            " 56%|█████▋    | 9/16 [00:23<00:17,  2.53s/it]"
+          ]
+        }
+      ],
       "source": [
         "# mean pooling\n",
-        "eq_model_mean = PostHocEquivariantMean(model, n_rotations=4, flips=True)\n",
+        "eq_model_mean = PostHocEquivariantMean(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_mean)"
       ]
     },
@@ -619,6 +655,7 @@
       "source": [
         "# b)\n",
         "set_seed(42)\n",
+        "model = get_non_equivariant_vit(rotmnist)\n",
         "aggregation_model = Transformer(embed_dim=64, hidden_dim=128, num_heads=4, num_layers=2, dropout=0.1)\n",
         "eq_model_learned_aggregation = PostHocLearnedAggregation(model=model, aggregation_model=aggregation_model)\n",
         "eq_model_learned_aggregation = train(eq_model_learned_aggregation, n_epochs=25)\n",
@@ -640,7 +677,7 @@
       "source": [
         "# mean pooling\n",
         "set_seed(42)\n",
-        "model = get_non_equivariant_vit()\n",
+        "model = get_non_equivariant_vit(rotmnist)\n",
         "eq_model_mean = PostHocEquivariantMean(model, finetune_mlp_head=True)\n",
         "eq_model_mean = train(eq_model_mean, n_epochs=25)\n",
         "evaluate(eq_model_mean)"
@@ -753,7 +790,7 @@
       "source": [
         "# mean pooling\n",
         "set_seed(42)\n",
-        "model = get_non_equivariant_vit()\n",
+        "model = get_non_equivariant_vit(rotmnist)\n",
         "eq_model_mean = PostHocEquivariantMean(model, finetune_model=True)\n",
         "eq_model_mean = train(eq_model_mean, n_epochs=25)\n",
         "evaluate(eq_model_mean)"
