write proof to show the equivariant for the post-hoc models

--- a/src/post_hoc_equivariance/post_hoc_equivariance.ipynb
+++ b/src/post_hoc_equivariance/post_hoc_equivariance.ipynb
@@ -398,6 +398,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Equivariant Finetunning\n",
+        " \n",
+        "Similar to the idea of Basu et al. (2023), which they proposed a finetuning method called equituning that starts with potentially non-equivariant model M and produces a model $M_G$ that is equivariant to a group G. \n",
+        "\n",
+        "Given a set $\\chi$, group action of G on X is defined as $\\Gamma X$: $G \\times \\chi$ -> $\\chi$. We write $\\Gamma X(g,x)$ simply as gx for bervity.\n",
+        "\n",
+        "A model M: X -> Y is equivariant to G under the group action of G on X and Y if M(gx) = g(M(x)) for all g $\\in$ G, x $\\in$ $\\chi$. This essentially means that any group transformation g to the input $\\Gamma X(g,x)$ should reflect with an equivalent group transformation of the output  $\\Gamma Y(g,M(x))$.\n",
+        "\n",
+        "Equituning converts a pretrained model into an equivariant version by minimizing the distance of features obtained from pretrained and equivariant models. The output of an equituned model is given by\n",
+        "\n",
+        "- $ x $ as the input image.\n",
+        "- $ g $ as a transformation in the group $ G $.\n",
+        "- $ g^{-1} $ as a inverse of the transformation in the group $ G $.\n",
+        "- $ M(x) $ as the output logits obtained from the original input image $ x $.\n",
+        "- $ M_G(x) $ as the output logits obtained from the transformed input image $ gx $.\n",
+        "\n",
+        "\n",
+        "$$ M_G(x) = \\frac{\\sum_{g \\in G}{g^{-1}M(gx)}}{|G|} $$"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -412,6 +436,13 @@
         "# mean pooling\n",
         "eq_model_mean = PostHocEquivariantMean(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_mean)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$$ M_G(x) = \\max_{g \\in G}{g^{-1}M(gx)}"
       ]
     },
     {
@@ -432,6 +463,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$$ M_G(x) = \\sum_{g \\in G}{g^{-1}M(gx)}"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -449,6 +487,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "For the `PostHocEquivariantMostProbable` model, let's denote:\n",
+        "- $ x $ as the input image.\n",
+        "- $ g $ as a transformation in the group $ G $.\n",
+        "- $ M(x) $ as the output logits obtained from the original input image $ x $.\n",
+        "- $  M_G(x) $ as the output logits obtained from the transformed input image $ gx $.\n",
+        "\n",
+        "The model computes logits for each transformation independently and then combines them to get the final logits. The equation can be represented as follows:\n",
+        "\n",
+        "$$  M_G(x) = \\log \\left( \\prod_{g \\in G}\\text{softmax}{(M(gx))} \\right) $$\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -463,6 +516,21 @@
         "# product of class probabilities\n",
         "eq_model_most_probable = PostHocEquivariantMostProbable(model, n_rotations=16, flips=False)\n",
         "evaluate(eq_model_most_probable)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "For the `PostHocEquivariantMostCertain` model, let's denote:\n",
+        "- $ x $ as the input image.\n",
+        "- $ g $ as a transformation in the group $ G $.\n",
+        "- $ M(x) $ as the output logits obtained from the original input image $ x $.\n",
+        "- $ M_G(x) $ as the output logits obtained from the transformed input image $ gx $.\n",
+        "\n",
+        "The model computes logits for each transformation independently and selects the transformation with the highest probability for each class. It then selects the logits corresponding to these highest probabilities. The equation can be represented as follows:\n",
+        "\n",
+        "$$  M_G(x) =   \\text{arg max}_{g \\in G} (\\text{softmax}{(M(gx)))} $$"
       ]
     },
     {
@@ -503,6 +571,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### PostHocLearnedScoreAggregation\n",
+        "Similar to the idea of λ-equitune in (Sourya Basu (2023). Efficient Equivariant Transfer Learning from Pretrained Models), revolves around recognizing that, within a pretrained model M, features M(gx) derived from fixed x are not uniformly crucial across all transformations g $\\in$ G. Let λ(gx) denote the significance weight assigned to feature M(gx) for g $\\in$ G, x $\\in$ X. Assuming a finite G, as in Basu et al. (2023), λ : X → $R^+$ is predefined. The λ-equituned model, denoted as $M^{λ} {G}$, aims to minimize:\n",
+        "\n",
+        "$$\\min_{ M_G^{λ}(x)} \\sum_{g \\in G} || λ(gx) M(gx) -  M_G^{λ}(g,x)||^{2}$$\n",
+        "\n",
+        "subject to:\n",
+        "\n",
+        "$$ M_G^{λ}(gx) = g M_G^{λ}(x)$$ \n",
+        "for all g $\\in$ G.\n",
+        "\n",
+        "The solution to the above equation, referred to as λ-equitune, is given by:\n",
+        "\n",
+        "$$ M_G^{λ}(x) = \\frac{\\sum_{g \\in G}^{|G|}{g^{-1}λ(gx)M(gx)}}{\\sum_{g \\in G}{λ(gx)}}$$"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -520,6 +607,30 @@
         "eq_model_learned_score_aggregation = PostHocLearnedScoreAggregation(model=model, scoring_model=scoring_model)\n",
         "eq_model_learned_score_aggregation = train(eq_model_learned_score_aggregation, n_epochs=10)\n",
         "evaluate(eq_model_learned_score_aggregation)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### PostHocLearnedAggregation\n",
+        "\n",
+        "This method aggregates the embeddings using the transformer and then passes the combined embeddings through the model's MLP head to get the final logits. Since the transformer operations (layer normalization, multi-head attention, and feed-forward networks) do not depend on the order of embeddings, the aggregated result is independent of the transformations applied to the input. The final logits are produced by passing the aggregated embeddings through the MLP head. This process is invariant to the transformations since it operates on the aggregated embeddings, which represent the transformed input space.\n",
+        "\n",
+        "\n",
+        "#### Mathematical Representation\n",
+        "\n",
+        "   $$\n",
+        "   M_G(x) = \\text{Mlp}(\\text{Transformer}(M(gx))), g\\in G\n",
+        "   $$\n",
+        "\n",
+        "Since the aggregation model (transformer) is designed to handle sequences of embeddings in an order-invariant manner (due to the self-attention mechanism), the output should remain consistent under the same group transformations applied to the input and the output:\n",
+        "\n",
+        "$$\n",
+        " M_G(x) = g( M_G(x))\n",
+        "$$\n",
+        "\n",
+        "Therefore, the `PostHocLearnedAggregation` model is equivariant by design because the transformer aggregation maintains the equivariance property through its self-attention mechanism and the consistent application of transformations across the input space. The use of the class token ensures that the final output logits are derived in a manner that respects the input transformations.\n"
       ]
     },
     {
