--- a/demos/visualise_rotate.ipynb
+++ b/demos/visualise_rotate.ipynb
@@ -161,32 +161,32 @@
     }
    ],
    "source": [
-    "# Wrong\n",
+    "# # Wrong\n",
     "\n",
-    "model = models.GroupTransformer(\n",
-    "    group=groups.E2(num_elements=8),\n",
-    "    in_channels=1,\n",
-    "    num_channels=20,\n",
-    "    block_sizes=[2, 3],\n",
-    "    expansion_per_block=1,\n",
-    "    crop_per_layer=[2, 0, 2, 1, 1],\n",
-    "    image_size=28,\n",
-    "    num_classes=2,\n",
-    "    dropout_rate_after_maxpooling=0.0,\n",
-    "    maxpool_after_last_block=False,\n",
-    "    normalize_between_layers=False,\n",
-    "    patch_size=5,\n",
-    "    num_heads=9,\n",
-    "    norm_type=\"LayerNorm\",\n",
-    "    activation_function=\"Swish\",\n",
-    "    attention_dropout_rate=0.1,\n",
-    "    value_dropout_rate=0.1,\n",
-    "    whitening_scale=1.41421356,\n",
-    ")\n",
-    "model_path = \"../src/saved/results/rotMNIST_model_p4msa_type_Local_patch_5_dpatt_0.1_dpval_0.1_activ_Swish_norm_LayerNorm_white_1.41421356_optim_Adam_lr_0.001_bs_16_ep_50_wd_0.0001_seed_0_sched_constants_schdec_1.0.pt\"\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = torch.nn.DataParallel(model)\n",
-    "model.load_state_dict(torch.load(model_path, map_location=device), strict=False)"
+    "# model = models.GroupTransformer(\n",
+    "#     group=groups.E2(num_elements=8),\n",
+    "#     in_channels=1,\n",
+    "#     num_channels=20,\n",
+    "#     block_sizes=[2, 3],\n",
+    "#     expansion_per_block=1,\n",
+    "#     crop_per_layer=[2, 0, 2, 1, 1],\n",
+    "#     image_size=28,\n",
+    "#     num_classes=2,\n",
+    "#     dropout_rate_after_maxpooling=0.0,\n",
+    "#     maxpool_after_last_block=False,\n",
+    "#     normalize_between_layers=False,\n",
+    "#     patch_size=5,\n",
+    "#     num_heads=9,\n",
+    "#     norm_type=\"LayerNorm\",\n",
+    "#     activation_function=\"Swish\",\n",
+    "#     attention_dropout_rate=0.1,\n",
+    "#     value_dropout_rate=0.1,\n",
+    "#     whitening_scale=1.41421356,\n",
+    "# )\n",
+    "# model_path = \"../src/saved/results/rotMNIST_model_p4msa_type_Local_patch_5_dpatt_0.1_dpval_0.1_activ_Swish_norm_LayerNorm_white_1.41421356_optim_Adam_lr_0.001_bs_16_ep_50_wd_0.0001_seed_0_sched_constants_schdec_1.0.pt\"\n",
+    "# device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "# model = torch.nn.DataParallel(model)\n",
+    "# model.load_state_dict(torch.load(model_path, map_location=device), strict=False)"
    ]
   },
   {
@@ -513,6 +513,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now in one figure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
@@ -527,9 +534,64 @@
     }
    ],
    "source": [
-    "rotated_image = rotate_image(image, 80)\n",
-    "updated_prob_values = get_output_ViT(rotated_image.unsqueeze(0).unsqueeze(0), model_vit, device)\n",
-    "print(updated_prob_values)"
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "plt.subplots_adjust(bottom=0.25)\n",
+    "\n",
+    "# Create the gridspec \n",
+    "gs = fig.add_gridspec(2, 2, width_ratios=[2, 1])\n",
+    "ax1 = fig.add_subplot(gs[:, 0])\n",
+    "ax2 = fig.add_subplot(gs[0, 1])\n",
+    "ax3 = fig.add_subplot(gs[1, 1])\n",
+    "\n",
+    "# Left image\n",
+    "degree = 0\n",
+    "rotated_image = rotate_image(image, degree)\n",
+    "image_plot = ax1.imshow(rotated_image.cpu().numpy(), cmap=\"gray\")\n",
+    "ax1.set_title(\"Degree: {}\".format(degree))\n",
+    "\n",
+    "# Right barplot image GE-ViT\n",
+    "prob_values = get_output_gevit(image, model, device)\n",
+    "barplot1 = ax2.bar(list(range(len(prob_values))), prob_values)\n",
+    "ax2.set_xlabel('Number')\n",
+    "ax2.set_ylabel('Probability')\n",
+    "ax2.set_title('GE-ViT')\n",
+    "ax2.yaxis.set_ticks(np.arange(0, 1.1, 0.1))\n",
+    "ax2.set_ylim([0, 1])\n",
+    "ax2.xaxis.set_ticks(np.arange(0, 10, 1))\n",
+    "\n",
+    "# Right barplot image lower vision transformer\n",
+    "prob_values = get_output_ViT(image, model_vit, device)\n",
+    "barplot2 = ax3.bar(list(range(len(prob_values))), prob_values)\n",
+    "ax3.set_xlabel('Number')\n",
+    "ax3.set_ylabel('Probability')\n",
+    "ax3.set_title('Vision Transformer')\n",
+    "ax3.yaxis.set_ticks(np.arange(0, 1.1, 0.1))\n",
+    "ax3.set_ylim([0, 1])\n",
+    "ax3.xaxis.set_ticks(np.arange(0, 10, 1))\n",
+    "\n",
+    "# Set a title for the figure\n",
+    "fig.suptitle(\"Effect image rotation GE-ViT and Vision Transformer model\")\n",
+    "\n",
+    "# Define the slider update function\n",
+    "def update_rotation(val):\n",
+    "    degree = val\n",
+    "    rotated_image = rotate_image(image, degree)\n",
+    "    image_plot.set_data(rotated_image.cpu().numpy())\n",
+    "    updated_prob_values_gevit = get_output_gevit(rotated_image.unsqueeze(0).unsqueeze(0), model, device)\n",
+    "    updated_prob_values_vit = get_output_ViT(rotated_image.unsqueeze(0).unsqueeze(0), model_vit, device)\n",
+    "    for bar1, value1, bar2, value2 in zip(barplot1, updated_prob_values_gevit, barplot2, updated_prob_values_vit):\n",
+    "        bar1.set_height(value1)\n",
+    "        bar2.set_height(value2)\n",
+    "    \n",
+    "    ax1.set_title(\"Degree: {}\".format(degree))\n",
+    "    fig.canvas.draw_idle()\n",
+    "    \n",
+    "# Create the slider\n",
+    "slider_ax = plt.axes([0.2, 0.1, 0.6, 0.03])\n",
+    "slider = Slider(slider_ax, 'Rotation', -180, 180, valinit=degree)\n",
+    "slider.on_changed(update_rotation)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
